# StampFly

./: .gitignore  CLAUDE.md  README.md  platformio.ini  presentation_outline.md  start.sh  temp_platformio.ini  test_udp_sender.py
.github/workflows/: ci.yml  deploy-pages.yml
GUI/: 2.Graph_Gpio_D_1_5_4.py  analyze_brainwaves.py  app.py  app_claude_code.py  brainwave_dashboard.py  pyproject.toml  simple_dashboard.py  simple_eeg_sender.py  start_dashboard_claude_code.py  web_dashboard.py
GUI/brainwave_data/: latest_brainwave_data.json
GUI/templates/: dashboard.html
docs/: wifi_rc.md  公式ファーム書き込み手順.md
scripts/: load_env.py  mqtt_monitor.py
src/: alt_kalman.cpp  debug_motor_control.cpp  debug_serial_test.cpp  eeg_drone_control.cpp  eeg_led_color.cpp  eeg_led_controller.cpp  eeg_led_simple.cpp  eeg_mqtt_drone.cpp  eeg_rotation_control.cpp  emergency_stop.cpp  esp32s3_debug_test.cpp  extreme_motor_test.cpp  flight_control.cpp  imu.cpp  led.cpp  led.hpp  pieeg_mqtt.cpp  pieeg_mqtt.hpp  rc.cpp  sensor.cpp  sensor.hpp  simple_eeg_drone.cpp  simple_eeg_receiver.cpp  simple_flight_control.cpp  simple_motor_test.cpp  simple_udp_test.cpp  tof.cpp  udp_led_test.cpp  udp_test_receiver.cpp  wifi_rc_drone.cpp  wifi_rc_page.h  wifi_test.cpp
web/: index.html  package-lock.json  package.json
web/src/: drone.ts  main.ts  mqtt.ts  styles.css
web/test/: drone.test.ts
